welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:7: error: Unit does not take parameters
  Motif()
       ^